Renamed CWnd::CharToTChar to ::CharToTChar
Renamed CWnd::CharToWide  to ::CharToWide
Renamed CWnd::TCharToChar to ::TCharToChar
Renamed CWnd::TCharToWide to ::TCharToWide
Renamed CWnd::WideToChar  to ::WideToChar
Renamed CWnd::WideToTChar to ::WideToTChar
Removed CWinException::MessageBox
Removed CPropertySheet::QuerySiblings

Added DS_NO_CLOSE style to suppress the closing of docked dockers
Added WM_PAINT handler to CDialog::DialogProcDefault
Added WM_PAINT handler to CPropertyPage::DialogProcDefault

Added GDIPlus sample
Updated Network samples
Update  FormDemo sample

Incompatibilities with previous versions
----------------------------------------
* The OnPaint function definition has changed to:
    virtual void OnPaint(CDC& dc); 
  The older OnPaint function will be ignored.	
* The stricter testing with asserts might reveal previously hidden errors in 
   user's code.
* Some CSocket functions take TCHAR as an argument instead of char.
* CFrame::LoadRegistrySettings, CFrame::LoadRegistryMRUSettings and 
   CFrame::SaveRegistrySettings return BOOL.
* CPropertySheet.m_PSH is now private. Use SetIcon to set the icon.
* CPropertyPage change the return types of several functions.
* Replace all instances of "Menubar" with "MenuBar"
* Replace all instances of "Rebar" with "ReBar"
* Replace all instances of "Statusbar" with "StatusBar"
* Replace all instances of "Toolbar" with "ToolBar"
* The following functions now return a CWnd pointer instead of a HWND:
   GetActiveWindow, GetAncestor, GetCapture, GetFocus, GetDlgItem, GetWindow,
   GetLastAtivePopup, GetParent, GetTopWindow, SetActiveWindow, SetCapture, 
   SetFocus, and SetParent.
   

Version 6.9
===========

New Features and Enhancements
-----------------------------
* Added a WebBrowser class called CWebBrowser.  This class provides a web 
   browser in a window. This class can be used as a view window anywhere 
   view windows are used, such as in frames, dockers, MDI Children, 